<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.waitlist.MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/film_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_label" />

    <EditText
        android:id="@+id/film_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titre_label"
        android:inputType="textPersonName|textCapWords"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/realisation_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realisation_label" />

    <EditText
        android:id="@+id/realisation_edit_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/realisation_label"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/scenario_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scenario_label" />

    <EditText
        android:id="@+id/scenario_edit_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scenario_label"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/musique_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musique_label" />

    <EditText
        android:id="@+id/musique_edit_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/musique_label"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_label" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_label"
        android:gravity="center"
        android:inputType="text|textMultiLine" />

    <TextView
        android:id="@+id/horaire_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horaire_label" />


        <DatePicker
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:startYear="2000"
            android:endYear="2100"
            android:maxDate="12/31/2100"
            android:minDate="01/01/2000"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/horaire_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="clock"
            />


    <Button
        android:id="@+id/add_film_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addToWaitlist"
        android:text="@string/add_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_guests_list_view"
        android:layout_width="match_parent"
        android:layout_height="1000dp" />
    </LinearLayout>


</ScrollView>

</LinearLayout>

