<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/titre_label"
                android:textSize="18sp"
                android:inputType="textMultiLine"/>

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/scenario"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scenario_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/realisation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/realisation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/musique_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/musique_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:textSize="16sp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/horaire"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>